Process all participants' data and split into activities

--- a/har-steady.ipynb
+++ b/har-steady.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import hashlib\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
+    "import re\n",
     "import requests\n",
     "import seaborn as sns\n",
+    "import statistics\n",
     "\n",
     "from io import BytesIO\n",
     "from zipfile import ZipFile\n",
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,19 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "filter_dev2 = list(filter(lambda k: 'dev2' in k, zipfile.namelist()))\n",
+    "pattern = re.compile('.*\\/part(\\d{1,2})\\/.*')\n",
+    "\n",
     "har_participants = dict()\n",
     "for p in filter_dev2:\n",
-    "    har_participants[p] = pd.read_csv(zipfile.open(p), header=None, names=COLUMNS)"
+    "    har_participants[pattern.search(p).group(1)] = pd.read_csv(zipfile.open(p), header=None, names=COLUMNS)\n",
+    "    \n",
+    "har_participants_steady = dict()\n",
+    "# Steady activities correspond to activities 1 to 5\n",
+    "for k, v in har_participants.items():\n",
+    "    har_participants_steady[k] = v[v[ACTIVITY] < 6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,48 +264,48 @@
        "52863  1039300.0              1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "har_0 = pd.read_csv(zipfile.open(filter_dev2[0]), header=None, names=COLUMNS)\n",
-    "har_0_steady = har_0[har_0[ACTIVITY] < 6]\n",
+    "# Examine one of the participants data steady activities\n",
+    "har_0_steady = har_participants_steady[str(0)]\n",
     "har_0_steady.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/billy/.local/share/virtualenvs/human-activity-recognition-AJKTVVRx/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:298: MatplotlibDeprecationWarning: \n",
+      "/Users/grodriguezcano/.virtualenvs/human-activity-recognition/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:298: MatplotlibDeprecationWarning: \n",
       "The rowNum attribute was deprecated in Matplotlib 3.2 and will be removed two minor releases later. Use ax.get_subplotspec().rowspan.start instead.\n",
       "  layout[ax.rowNum, ax.colNum] = ax.get_visible()\n",
-      "/Users/billy/.local/share/virtualenvs/human-activity-recognition-AJKTVVRx/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:298: MatplotlibDeprecationWarning: \n",
+      "/Users/grodriguezcano/.virtualenvs/human-activity-recognition/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:298: MatplotlibDeprecationWarning: \n",
       "The colNum attribute was deprecated in Matplotlib 3.2 and will be removed two minor releases later. Use ax.get_subplotspec().colspan.start instead.\n",
       "  layout[ax.rowNum, ax.colNum] = ax.get_visible()\n",
-      "/Users/billy/.local/share/virtualenvs/human-activity-recognition-AJKTVVRx/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:304: MatplotlibDeprecationWarning: \n",
+      "/Users/grodriguezcano/.virtualenvs/human-activity-recognition/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:304: MatplotlibDeprecationWarning: \n",
       "The rowNum attribute was deprecated in Matplotlib 3.2 and will be removed two minor releases later. Use ax.get_subplotspec().rowspan.start instead.\n",
       "  if not layout[ax.rowNum + 1, ax.colNum]:\n",
-      "/Users/billy/.local/share/virtualenvs/human-activity-recognition-AJKTVVRx/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:304: MatplotlibDeprecationWarning: \n",
+      "/Users/grodriguezcano/.virtualenvs/human-activity-recognition/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:304: MatplotlibDeprecationWarning: \n",
       "The colNum attribute was deprecated in Matplotlib 3.2 and will be removed two minor releases later. Use ax.get_subplotspec().colspan.start instead.\n",
       "  if not layout[ax.rowNum + 1, ax.colNum]:\n",
-      "/Users/billy/.local/share/virtualenvs/human-activity-recognition-AJKTVVRx/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:298: MatplotlibDeprecationWarning: \n",
+      "/Users/grodriguezcano/.virtualenvs/human-activity-recognition/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:298: MatplotlibDeprecationWarning: \n",
       "The rowNum attribute was deprecated in Matplotlib 3.2 and will be removed two minor releases later. Use ax.get_subplotspec().rowspan.start instead.\n",
       "  layout[ax.rowNum, ax.colNum] = ax.get_visible()\n",
-      "/Users/billy/.local/share/virtualenvs/human-activity-recognition-AJKTVVRx/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:298: MatplotlibDeprecationWarning: \n",
+      "/Users/grodriguezcano/.virtualenvs/human-activity-recognition/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:298: MatplotlibDeprecationWarning: \n",
       "The colNum attribute was deprecated in Matplotlib 3.2 and will be removed two minor releases later. Use ax.get_subplotspec().colspan.start instead.\n",
       "  layout[ax.rowNum, ax.colNum] = ax.get_visible()\n",
-      "/Users/billy/.local/share/virtualenvs/human-activity-recognition-AJKTVVRx/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:304: MatplotlibDeprecationWarning: \n",
+      "/Users/grodriguezcano/.virtualenvs/human-activity-recognition/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:304: MatplotlibDeprecationWarning: \n",
       "The rowNum attribute was deprecated in Matplotlib 3.2 and will be removed two minor releases later. Use ax.get_subplotspec().rowspan.start instead.\n",
       "  if not layout[ax.rowNum + 1, ax.colNum]:\n",
-      "/Users/billy/.local/share/virtualenvs/human-activity-recognition-AJKTVVRx/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:304: MatplotlibDeprecationWarning: \n",
+      "/Users/grodriguezcano/.virtualenvs/human-activity-recognition/lib/python3.7/site-packages/pandas/plotting/_matplotlib/tools.py:304: MatplotlibDeprecationWarning: \n",
       "The colNum attribute was deprecated in Matplotlib 3.2 and will be removed two minor releases later. Use ax.get_subplotspec().colspan.start instead.\n",
       "  if not layout[ax.rowNum + 1, ax.colNum]:\n"
      ]
@@ -304,20 +313,20 @@
     {
      "data": {
       "text/plain": [
-       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x14f0e6390>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x14f31c390>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x14f0e9590>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x14f3b0a90>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x14f452e50>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x14f4c7250>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x14f5a5690>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x14f605990>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x14f6059d0>,\n",
-       "       <matplotlib.axes._subplots.AxesSubplot object at 0x14f7a0e90>],\n",
+       "array([<matplotlib.axes._subplots.AxesSubplot object at 0x139838f10>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x13dfd3350>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x1461c1710>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x1461f9ad0>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x14622ee90>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x146271f50>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x1462a7b90>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x1462dcf90>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x1462e5c90>,\n",
+       "       <matplotlib.axes._subplots.AxesSubplot object at 0x146328210>],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -335,13 +344,76 @@
     }
    ],
    "source": [
+    "# Plot one of the participants data steady activities\n",
     "# har_0_steady.set_index(TIME).reset_index()[har_0_steady.columns.difference([DEVICE, TIME, ACTIVITY])].plot(subplots=True, figsize=(20, 15))\n",
     "har_0_steady.set_index(TIME).reset_index()[har_0_steady.columns.difference([DEVICE, TIME])].plot(subplots=True, figsize=(20, 15))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group and split sensors' data per activity per participant\n",
+    "har_partipants_steady_activities = dict()\n",
+    "for k, v in har_participants_steady.items():\n",
+    "    group_cond = v[ACTIVITY].ne(v[ACTIVITY].shift()).cumsum()\n",
+    "    har_partipants_steady_activities[k] = [v for k, v in v.groupby(group_cond)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 0\n",
+      "count   195.000000\n",
+      "mean   3104.112821\n",
+      "std    2043.550563\n",
+      "min     384.000000\n",
+      "25%    1153.000000\n",
+      "50%    2689.000000\n",
+      "75%    5632.000000\n",
+      "max    6785.000000\n",
+      "          0\n",
+      "0.1  1025.0\n",
+      "0.2  1152.0\n",
+      "0.3  1153.0\n",
+      "0.4  1869.4\n",
+      "0.5  2689.0\n",
+      "0.6  3201.0\n",
+      "0.7  4352.2\n",
+      "0.8  5760.0\n",
+      "0.9  6145.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get minimum and maximum sizes of data events collected per activity\n",
+    "activities_sizes = list()\n",
+    "for k, v in har_partipants_steady_activities.items():\n",
+    "    for e in v:\n",
+    "        activities_sizes.append(len(e.index))\n",
+    "\n",
+    "print(pd.DataFrame(activities_sizes).describe())\n",
+    "print(pd.DataFrame(activities_sizes).quantile([e / 10 for e in range(1, 10)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,32 +450,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_4\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "lstm_4 (LSTM)                (None, 100)               44000     \n",
-      "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 100)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_6 (Dense)              (None, 100)               10100     \n",
-      "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 5)                 505       \n",
-      "=================================================================\n",
-      "Total params: 54,605\n",
-      "Trainable params: 54,605\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_timesteps = 1\n",
     "n_features = 9\n",
@@ -424,24 +473,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:sample_weight modes were coerced from\n",
-      "  ...\n",
-      "    to  \n",
-      "  ['...']\n",
-      "Train for 20356.0 steps\n",
-      "Epoch 1/3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "steps=len(har_0_steady.index)/2\n",
     "model.fit(data_gen, steps_per_epoch=steps, epochs=3, verbose=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2 > int(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
